perfect code good job

--- a/your_ml_project/templates/index.html
+++ b/your_ml_project/templates/index.html
@@ -164,13 +164,16 @@
  
 <div id="aftermap">
   <button id="totsalbtn">
-     <a id="totsalbtn" href="/p" class="button">    Click to see the Total sales prediction
+     <a id="totsalbtn" href="/p" class="button">    Click to see the Total sales prediction India
+      </a>
+  </button>
+   <button id="totsalbtn">
+     <a id="totsalbtn" href="/gp" class="button">    Click to see the Global Total sales prediction
       </a>
   </button>
 
  
 
-    <button id="totsalbtn" onclick="goToIndex3()">Click to see the Total sales prediction</button>
 
   <script>
     function goToIndex3() {
