--- a/your_ml_project/templates/index3.html
+++ b/your_ml_project/templates/index3.html
@@ -48,7 +48,7 @@
 <body>
     <h1>EV Sales Predictor</h1>
 
-    <form method="POST" action="/predict">
+    <form method="POST" action="/globalprediction">
         <input type="text" name="year" placeholder="Enter Year (e.g. 2026)">
         <br>
         <button type="submit">Predict</button>
