--- a/your_ml_project/templates/index.html
+++ b/your_ml_project/templates/index.html
@@ -164,27 +164,23 @@
  
 <div id="aftermap">
   <button id="totsalbtn">
-     <a id="totsalbtn" href="/p" class="button">    Click to see the Total sales prediction India
-      </a>
+     <a id="totsalbtn" href="/p" class="button">Click to see the Total sales prediction India</a>
   </button>
-   <button id="totsalbtn">
-     <a id="totsalbtn" href="/gp" class="button">    Click to see the Global Total sales prediction
-      </a>
+  <button id="totsalbtn">
+     <a id="totsalbtn" href="/gp" class="button">Click to see the Global Total sales prediction</a>
   </button>
- <!-- CORRECTED BUTTON FOR YOUR HOMEPAGE (index.html) -->
-<button id="totsalbtn">
- <a id="totsalbtn" href="{{ url_for('battery_demand_prediction') }}" class="button">Battery Trend</a>
-</button>
-<button id="totsalbtn">
- <a id="totsalbtn" href="ev_market" class="button">EV Trend</a>
-</button>
- 
+  <!-- CORRECTED BUTTON FOR YOUR HOMEPAGE (index.html) -->
+  <button id="totsalbtn">
+    <a id="totsalbtn" href="{{ url_for('battery_demand_prediction') }}" class="button">Battery Trend</a>
+  </button>
   <button id="totsalbtn">
     <a id="totsalbtn" href="/oil_vs_ev" class="button">Click to see the EV sales vs oil demand</a>
-    </button>
-
- 
-
+  </button>
+  
+  <!-- NEW BUTTON FOR CHARGING SALES -->
+  <button id="totsalbtn">
+    <a id="totsalbtn" href="/charging" class="button">Click to see the EV Charging Points Prediction</a>
+  </button>
 
   <script>
     function goToIndex3() {
